add personPage and revise function

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,3 +9,15 @@ html,body{
     height: inherit;
 
 }
+a:link{
+    text-decoration: none;
+    background-color: #fff;
+}
+a:active {
+    text-decoration:underline;
+    background-color:#fff;
+    }
+a:visited {
+    text-decoration:underline;
+    background-color:#fff;
+    }
