--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,6 +1,7 @@
 .container{
     margin: 0px auto;
     width: 50%;
+
 }
 .container__name{
     display: flex;
@@ -11,13 +12,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-weight: 700;
 }
 /* 照片區 */
 .container__picture{
     border: 2px solid black;
-    width: 100%;
-    height: 300px;
+    max-width: 100%;
     position: relative;
+}
+.post__main__picture{
+    width: 100%;
+    object-fit: contain;
+    display: block;
 }
 .picture__like{
     position: absolute;
@@ -71,6 +77,7 @@
 /* 留言區 */
 .container__auth{
     margin: 5px 0px;
+    font-weight: 700;
 }
 .container__msg{
     display: flex;
