add change member data

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,7 +3,7 @@ html,body{
     height: 100%;
     margin:0px;
     padding: 0px;
-    background-color: antiquewhite;
+    background-color: #FFF;
 }
 .root{
     height: inherit;
