--- a/src/css/person.css
+++ b/src/css/person.css
@@ -54,6 +54,10 @@
 .personInfomation__name{
     font-weight: 700;
 }
+.introduction{
+    flex-direction: column;
+    align-items: flex-start;
+}
 .post_num{
     font-weight: 700;
 }
