--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -16,4 +16,14 @@
         display: block;
         justify-content: space-between;
     }
+    .container:nth-last-child(1){
+        margin-bottom: 30px;
+    }
+}
+
+
+@media (max-width:412px) {
+    .container:nth-last-child(1){
+        margin-bottom: 20px;
+    }
 }
