--- a/src/css/person.css
+++ b/src/css/person.css
@@ -19,6 +19,7 @@
     height: auto;
 }
 .personInfomation{
+    width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -124,5 +125,96 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.personInfomation__edit-icon{
+    display: none;
+}
+
+@media (max-width:1200px) {
+    .personDocument{
+        width: 60%;
+    }
+    .person_post{
+        width: 60%;
+        grid-template-columns: 1fr 1fr ;
+        gap:15px;
+    }
+    .person__Img{
+        width: 150px;
+        height: 150px;
+    }
+}
+
+@media (max-width:768px) {
+    .personDocument{
+        width: 90%;
+        margin: auto;
+    }
+    .personInfomation{
+        width: 400px;
+        margin-top: 80px;
+        justify-content: space-between;
+    }
+    .person_post{
+        width: 80%;
+        margin: auto;
+    }
+    .person__Img{
+        margin: 0px;
+    }
+    .personDocument__img{
+        margin-top: 80px;
+    }
+    .personInfomation__item{
+        justify-content: flex-start;
+        width: 100%;
+    }
+    .personInfomation__item-num{
+        margin-right: 20px;
+    }
+    .personInfomation__followers-num{
+        margin-right: 20px;
+    }
+    .person_post__item:nth-last-child(1){
+        margin-bottom: 80px;
+    }
+}
+
+@media (max-width:412px) {
+    .personDocument{
+        width: 100%;
+        margin: auto;
+    }
+    .personDocument__img{
+        margin: 60px 0px 0px 0px;
+    }
+    .person__Img{
+        width: 100px;
+        height: 100px;
+        margin: 10px;
+    }
+    .personInfomation{
+        margin-top: 60px;
+    }
+    .personInfomation__id-name{
+        font-size: 16px;
+    }
+    .person__hr{
+        width: 90%;
+    }
+    .person_post{
+        width: 100%;
+    }
+    .person_post__item{
+        height: 150px;
+    }
+    .personInfomation__edit-icon{
+        display: flex;
+        justify-content: flex-end;
+        width: 80px;
+    }
+    .personInfomation__edit{
+        display: none;
+    }
 }
 
