--- a/src/css/person.css
+++ b/src/css/person.css
@@ -79,12 +79,18 @@
     padding: 20px;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
-.personInfomation__select__item:hover{
+.post:hover{
     border-top: 1px solid black;
 }
-.personInfomation__select__item:active{
-    border-top: 1px solid black;
+
+#post{
+    -webkit-appearance:none;
+}
+#collect{
+    -webkit-appearance:none;
+
 }
 .select_icon{
     margin:0px 10px;
@@ -100,20 +106,37 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap:20px;
     margin: 20px auto;
+
+}
+.item__img{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .person_post__item{
     width: 100%;
     height: 200px;
-    background-color: black;
-
+    /* background-color: black; */
+    border: 1px solid lightgray;
+    cursor: pointer;
 }
+
 .item__status{
     width: 100%;
     height: 100%;
+    /* visibility:hidden; */
     display: flex;
     justify-content: center;
     align-items: center;
+    color: rgba(255,255,255,0);
+
+}
+.item__status:hover{
+    /* visibility:visible; */
     color: #FFF;
+    background-color: rgba(0,0,0,0.6);
 }
 .item__status_heart{
     display: flex;
