modify comment bug .RWD,add follow

--- a/src/css/person.css
+++ b/src/css/person.css
@@ -120,7 +120,7 @@
     height: 200px;
     /* background-color: black; */
     border: 1px solid lightgray;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 .item__status{
