--- a/src/css/container.css
+++ b/src/css/container.css
@@ -16,6 +16,23 @@
     margin: 5px;
 }
 /* 照片區 */
+.container__follow{
+    padding: 5px 10px;
+    background-color: #41b6e6;
+    color: #FFF;
+    border-radius: 5px;
+    margin: 10px;
+    cursor: pointer;
+}
+.container__follow__true{
+    padding: 5px 10px;
+    background-color: #FFF;
+    color: #41b6e6;
+    border-radius: 5px;
+    margin: 10px;
+    border: 1px solid #41b6e6;
+    cursor: pointer;
+}
 .container__name__personImagebox{
     width: 100%;
     display: flex;
@@ -42,6 +59,22 @@
     height: 500px;
     object-fit: contain;
     display: block;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    -webkit-transition: all 1s linear;
+    transition: all 1s linear;
+}
+@keyframes post__main__picture {
+    0% {
+        transform: translateX(0)
+    }
+    50% {
+        transform: translateX(-25%)
+    }
+    100% {
+        transform: translateX(-50%)
+    }
 }
 .picture__like{
     position: absolute;
@@ -56,11 +89,16 @@
     position: absolute;
     top:50%;
     left:10px;
+    z-index: 5;
+    cursor: pointer;
 }
+
 .picture__Rightbtn{
     position: absolute;
     top:50%;
     right:10px;
+    z-index: 5;
+    cursor: pointer;
 }
 .picture__dot{
     width: 100%;
@@ -76,15 +114,20 @@
     height: 10px;
     border-radius: 50%;
     margin: 5px;
-    background-color: aqua;
+    background-color: rgba(255, 255, 255,0.6);
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
 }
+
 .container__icon{
     display: flex;
     justify-content: space-between;
 
 }
 .container__content{
-    margin: 5px 0px;
+    border-bottom: 1px solid lightgray;
+    padding: 5px 0px;
+    margin-bottom: 5px;
 }
 /* 愛心 傳送 收藏icon */
 .container__icon__left{
