--- a/src/css/createNewPage.css
+++ b/src/css/createNewPage.css
@@ -89,9 +89,11 @@
 .preViewImg{
     width: 60%;
     height: 100%;
-    background-size:cover;
+    background-size:contain;
     border-radius: 0 0 0 10px;
     background-position: center;
+    background-repeat: no-repeat;
+    border-right: 1px solid lightgray;
 }
 .perviewImg__item{
     display: block;
@@ -130,7 +132,7 @@
     width: 50px;
     height: 50px;
     margin: 10px;
-    background-size:cover;
+    background-size:contain;
     border-radius: 50%;
     background-position: center;
     border: 1px solid black;
@@ -141,7 +143,6 @@
 .perViewPost__input{
     outline-style: none ;
     border: 0px;
-    border-bottom: 1px solid lightgray;
     padding: 20px;
     font-size: 16px;
     width: 85%;
@@ -157,15 +158,31 @@
     .newPage__box{
         width: 80%;
         margin: auto;
-        height: 50%;
+        height: 70%;
     }
 
-    .perViewPost__member__img{
-        width: 30px;
-        height: 30px;
-        margin: 0px;
+    .newPage__newPost {
+        flex-direction: column;
+    }
+    .preViewImg{
+        width: 100%;
+        border-right: 0px;
+        border-bottom: 1px solid lightgray;
+        border-radius: 0px;
     }
 }
-@media (max-width:360px) {
-
+@media (max-width:412px) {
+.newPage__box{
+    height: 80%;
+    width: 90%;
+}
+.newPage__newPost {
+    flex-direction: column;
+}
+.preViewImg{
+    width: 100%;
+    border-right: 0px;
+    border-bottom: 1px solid lightgray;
+    border-radius: 0px;
+}
 }
