--- a/src/css/setting.css
+++ b/src/css/setting.css
@@ -46,6 +46,7 @@
     color: #FFF;
     border-radius: 5px;
     text-align: center;
+    cursor: pointer;
 }
 .setting__closebtn{
     position: absolute;
