--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,23 +1,27 @@
-html,body{
-    width: 100%;
-    height: 100%;
-    margin:0px;
-    padding: 0px;
-    background-color: #FFF;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  background-color: #fff;
 }
-.root{
-    height: inherit;
-
+.root {
+  height: inherit;
 }
-a:link{
-    text-decoration: none;
-    background-color: #fff;
+a {
+  text-decoration: none;
+  background-color: #fff;
+}
+a:link {
+  text-decoration: none;
+  background-color: #fff;
 }
 a:active {
-    text-decoration:underline;
-    background-color:#fff;
-    }
+  text-decoration: underline;
+  background-color: #fff;
+}
 a:visited {
-    text-decoration:underline;
-    background-color:#fff;
-    }
+  text-decoration: underline;
+  background-color: #fff;
+}
